--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,196 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: Dark Plottings at Blandings Castle</a>
+					<ol>
+						<li>
+							<a href="text/chapter-1.xhtml#chapter-1-1">1</a>
+						</li>
+						<li>
+							<a href="text/chapter-1.xhtml#chapter-1-2">2</a>
+						</li>
+						<li>
+							<a href="text/chapter-1.xhtml#chapter-1-3">3</a>
+						</li>
+						<li>
+							<a href="text/chapter-1.xhtml#chapter-1-4">4</a>
+						</li>
+						<li>
+							<a href="text/chapter-1.xhtml#chapter-1-4">5</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: Enter Psmith</a>
+					<ol>
+						<li>
+							<a href="text/chapter-2.xhtml#chapter-2-1">1</a>
+						</li>
+						<li>
+							<a href="text/chapter-2.xhtml#chapter-2-2">2</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: Eve Borrows an Umbrella</a>
+				</li>
+				<li>
+					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: Painful Scene at the Drones Club</a>
+				</li>
+				<li>
+					<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: Psmith Applies for Employment</a>
+				</li>
+				<li>
+					<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: Lord Emsworth Meets a Poet</a>
+					<ol>
+						<li>
+							<a href="text/chapter-6.xhtml#chapter-6-1">1</a>
+						</li>
+						<li>
+							<a href="text/chapter-6.xhtml#chapter-6-2">2</a>
+						</li>
+						<li>
+							<a href="text/chapter-6.xhtml#chapter-6-3">3</a>
+						</li>
+						<li>
+							<a href="text/chapter-6.xhtml#chapter-6-4">4</a>
+						</li>
+						<li>
+							<a href="text/chapter-6.xhtml#chapter-6-5">5</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: Baxter Suspects</a>
+					<ol>
+						<li>
+							<a href="text/chapter-7.xhtml#chapter-7-1">1</a>
+						</li>
+						<li>
+							<a href="text/chapter-7.xhtml#chapter-7-2">2</a>
+						</li>
+						<li>
+							<a href="text/chapter-7.xhtml#chapter-7-3">3</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: Confidences on the Lake</a>
+					<ol>
+						<li>
+							<a href="text/chapter-8.xhtml#chapter-8-1">1</a>
+						</li>
+						<li>
+							<a href="text/chapter-8.xhtml#chapter-8-2">2</a>
+						</li>
+						<li>
+							<a href="text/chapter-8.xhtml#chapter-8-3">3</a>
+						</li>
+						<li>
+							<a href="text/chapter-8.xhtml#chapter-8-4">4</a>
+						</li>
+						<li>
+							<a href="text/chapter-8.xhtml#chapter-8-5">5</a>
+						</li>
+						<li>
+							<a href="text/chapter-8.xhtml#chapter-8-6">6</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: Psmith Engages a Valet</a>
+					<ol>
+						<li>
+							<a href="text/chapter-9.xhtml#chapter-9-1">1</a>
+						</li>
+						<li>
+							<a href="text/chapter-9.xhtml#chapter-9-2">2</a>
+						</li>
+						<li>
+							<a href="text/chapter-9.xhtml#chapter-9-3">3</a>
+						</li>
+						<li>
+							<a href="text/chapter-9.xhtml#chapter-9-4">4</a>
+						</li>
+						<li>
+							<a href="text/chapter-9.xhtml#chapter-9-5">5</a>
+						</li>
+						<li>
+							<a href="text/chapter-9.xhtml#chapter-9-6">6</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: Sensational Occurrence at a Poetry Reading</a>
+					<ol>
+						<li>
+							<a href="text/chapter-10.xhtml#chapter-10-1">1</a>
+						</li>
+						<li>
+							<a href="text/chapter-10.xhtml#chapter-10-2">2</a>
+						</li>
+						<li>
+							<a href="text/chapter-10.xhtml#chapter-10-3">3</a>
+						</li>
+						<li>
+							<a href="text/chapter-10.xhtml#chapter-10-4">4</a>
+						</li>
+						<li>
+							<a href="text/chapter-10.xhtml#chapter-10-5">5</a>
+						</li>
+						<li>
+							<a href="text/chapter-10.xhtml#chapter-10-6">6</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Almost Entirely About Flower-Pots</a>
+					<ol>
+						<li>
+							<a href="text/chapter-11.xhtml#chapter-11-1">1</a>
+						</li>
+						<li>
+							<a href="text/chapter-11.xhtml#chapter-11-2">2</a>
+						</li>
+						<li>
+							<a href="text/chapter-11.xhtml#chapter-11-3">3</a>
+						</li>
+						<li>
+							<a href="text/chapter-11.xhtml#chapter-11-4">4</a>
+						</li>
+						<li>
+							<a href="text/chapter-11.xhtml#chapter-11-5">5</a>
+						</li>
+						<li>
+							<a href="text/chapter-11.xhtml#chapter-11-6">6</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: More on the Flower-Pot Theme</a>
+				</li>
+				<li>
+					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: Psmith Receives Guests</a>
+					<ol>
+						<li>
+							<a href="text/chapter-13.xhtml#chapter-13-1">1</a>
+						</li>
+						<li>
+							<a href="text/chapter-13.xhtml#chapter-13-2">2</a>
+						</li>
+						<li>
+							<a href="text/chapter-13.xhtml#chapter-13-3">3</a>
+						</li>
+						<li>
+							<a href="text/chapter-13.xhtml#chapter-13-4">4</a>
+						</li>
+						<li>
+							<a href="text/chapter-13.xhtml#chapter-13-5">5</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: Psmith Accepts Employment</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -34,7 +223,7 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">Leave it to Psmith</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
