--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,22 +12,22 @@
 				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">Leave it to Psmith</i><br/>
-			was published in YEAR by<br/>
+			was published in 1923 by<br/>
 			<a href="https://en.wikipedia.org/wiki/P.G._Wodehouse">P.G. Wodehouse</a>.</p>
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
 			by<br/>
-			<a href="PRODUCER_URL">PRODUCER</a>,<br/>
+			<a href="http://www.github.com/vrajmohan">Vraj Mohan</a>,<br/>
 			and is based on a transcription produced in 2019 by<br/>
 			<b class="name">Ramon Pajares Box</b>, <b class="name">Jim Adcock</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/60067">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
-			<a href="IA_URL">Internet Archive</a>.</p>
+			<a href="https://catalog.hathitrust.org/Record/007144200">HathiTrust Digital Library</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
-			a painting completed in YEAR by<br/>
-			<a href="ARTIST_WIKI_URL">ARTIST</a>.<br/>
+			<i epub:type="se:name.visual-art.painting">Castle and Watermill by a River</i>,<br/>
+			a painting completed in 1670 by<br/>
+			<a href="https://en.wikipedia.org/wiki/Jacob_van_Ruisdael">Jacob van Ruisdael</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
