--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -157,7 +157,7 @@
 					</ol>
 				</li>
 				<li>
-					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Almost Entirely About Flower-Pots</a>
+					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Almost Entirely About Flowerpots</a>
 					<ol>
 						<li>
 							<a href="text/chapter-11.xhtml#chapter-11-1">1</a>
@@ -180,7 +180,7 @@
 					</ol>
 				</li>
 				<li>
-					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: More on the Flower-Pot Theme</a>
+					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: More on the Flowerpot Theme</a>
 				</li>
 				<li>
 					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: Psmith Receives Guests</a>
