--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -17,19 +17,19 @@
 					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: Dark Plottings at Blandings Castle</a>
 					<ol>
 						<li>
-							<a href="text/chapter-1.xhtml#chapter-1-1">1</a>
+							<a href="text/chapter-1.xhtml#chapter-1-1" epub:type="z3998:roman">I</a>
 						</li>
 						<li>
-							<a href="text/chapter-1.xhtml#chapter-1-2">2</a>
+							<a href="text/chapter-1.xhtml#chapter-1-2" epub:type="z3998:roman">II</a>
 						</li>
 						<li>
-							<a href="text/chapter-1.xhtml#chapter-1-3">3</a>
+							<a href="text/chapter-1.xhtml#chapter-1-3" epub:type="z3998:roman">III</a>
 						</li>
 						<li>
-							<a href="text/chapter-1.xhtml#chapter-1-4">4</a>
+							<a href="text/chapter-1.xhtml#chapter-1-4" epub:type="z3998:roman">IV</a>
 						</li>
 						<li>
-							<a href="text/chapter-1.xhtml#chapter-1-5">5</a>
+							<a href="text/chapter-1.xhtml#chapter-1-5" epub:type="z3998:roman">V</a>
 						</li>
 					</ol>
 				</li>
@@ -37,10 +37,10 @@
 					<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: Enter Psmith</a>
 					<ol>
 						<li>
-							<a href="text/chapter-2.xhtml#chapter-2-1">1</a>
+							<a href="text/chapter-2.xhtml#chapter-2-1" epub:type="z3998:roman">I</a>
 						</li>
 						<li>
-							<a href="text/chapter-2.xhtml#chapter-2-2">2</a>
+							<a href="text/chapter-2.xhtml#chapter-2-2" epub:type="z3998:roman">II</a>
 						</li>
 					</ol>
 				</li>
@@ -57,19 +57,19 @@
 					<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: Lord Emsworth Meets a Poet</a>
 					<ol>
 						<li>
-							<a href="text/chapter-6.xhtml#chapter-6-1">1</a>
+							<a href="text/chapter-6.xhtml#chapter-6-1" epub:type="z3998:roman">I</a>
 						</li>
 						<li>
-							<a href="text/chapter-6.xhtml#chapter-6-2">2</a>
+							<a href="text/chapter-6.xhtml#chapter-6-2" epub:type="z3998:roman">II</a>
 						</li>
 						<li>
-							<a href="text/chapter-6.xhtml#chapter-6-3">3</a>
+							<a href="text/chapter-6.xhtml#chapter-6-3" epub:type="z3998:roman">III</a>
 						</li>
 						<li>
-							<a href="text/chapter-6.xhtml#chapter-6-4">4</a>
+							<a href="text/chapter-6.xhtml#chapter-6-4" epub:type="z3998:roman">IV</a>
 						</li>
 						<li>
-							<a href="text/chapter-6.xhtml#chapter-6-5">5</a>
+							<a href="text/chapter-6.xhtml#chapter-6-5" epub:type="z3998:roman">V</a>
 						</li>
 					</ol>
 				</li>
@@ -77,13 +77,13 @@
 					<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: Baxter Suspects</a>
 					<ol>
 						<li>
-							<a href="text/chapter-7.xhtml#chapter-7-1">1</a>
+							<a href="text/chapter-7.xhtml#chapter-7-1" epub:type="z3998:roman">I</a>
 						</li>
 						<li>
-							<a href="text/chapter-7.xhtml#chapter-7-2">2</a>
+							<a href="text/chapter-7.xhtml#chapter-7-2" epub:type="z3998:roman">II</a>
 						</li>
 						<li>
-							<a href="text/chapter-7.xhtml#chapter-7-3">3</a>
+							<a href="text/chapter-7.xhtml#chapter-7-3" epub:type="z3998:roman">III</a>
 						</li>
 					</ol>
 				</li>
@@ -91,22 +91,22 @@
 					<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: Confidences on the Lake</a>
 					<ol>
 						<li>
-							<a href="text/chapter-8.xhtml#chapter-8-1">1</a>
+							<a href="text/chapter-8.xhtml#chapter-8-1" epub:type="z3998:roman">I</a>
 						</li>
 						<li>
-							<a href="text/chapter-8.xhtml#chapter-8-2">2</a>
+							<a href="text/chapter-8.xhtml#chapter-8-2" epub:type="z3998:roman">II</a>
 						</li>
 						<li>
-							<a href="text/chapter-8.xhtml#chapter-8-3">3</a>
+							<a href="text/chapter-8.xhtml#chapter-8-3" epub:type="z3998:roman">III</a>
 						</li>
 						<li>
-							<a href="text/chapter-8.xhtml#chapter-8-4">4</a>
+							<a href="text/chapter-8.xhtml#chapter-8-4" epub:type="z3998:roman">IV</a>
 						</li>
 						<li>
-							<a href="text/chapter-8.xhtml#chapter-8-5">5</a>
+							<a href="text/chapter-8.xhtml#chapter-8-5" epub:type="z3998:roman">V</a>
 						</li>
 						<li>
-							<a href="text/chapter-8.xhtml#chapter-8-6">6</a>
+							<a href="text/chapter-8.xhtml#chapter-8-6" epub:type="z3998:roman">VI</a>
 						</li>
 					</ol>
 				</li>
@@ -114,22 +114,22 @@
 					<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: Psmith Engages a Valet</a>
 					<ol>
 						<li>
-							<a href="text/chapter-9.xhtml#chapter-9-1">1</a>
+							<a href="text/chapter-9.xhtml#chapter-9-1" epub:type="z3998:roman">I</a>
 						</li>
 						<li>
-							<a href="text/chapter-9.xhtml#chapter-9-2">2</a>
+							<a href="text/chapter-9.xhtml#chapter-9-2" epub:type="z3998:roman">II</a>
 						</li>
 						<li>
-							<a href="text/chapter-9.xhtml#chapter-9-3">3</a>
+							<a href="text/chapter-9.xhtml#chapter-9-3" epub:type="z3998:roman">III</a>
 						</li>
 						<li>
-							<a href="text/chapter-9.xhtml#chapter-9-4">4</a>
+							<a href="text/chapter-9.xhtml#chapter-9-4" epub:type="z3998:roman">IV</a>
 						</li>
 						<li>
-							<a href="text/chapter-9.xhtml#chapter-9-5">5</a>
+							<a href="text/chapter-9.xhtml#chapter-9-5" epub:type="z3998:roman">V</a>
 						</li>
 						<li>
-							<a href="text/chapter-9.xhtml#chapter-9-6">6</a>
+							<a href="text/chapter-9.xhtml#chapter-9-6" epub:type="z3998:roman">VI</a>
 						</li>
 					</ol>
 				</li>
@@ -137,22 +137,22 @@
 					<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: Sensational Occurrence at a Poetry Reading</a>
 					<ol>
 						<li>
-							<a href="text/chapter-10.xhtml#chapter-10-1">1</a>
+							<a href="text/chapter-10.xhtml#chapter-10-1" epub:type="z3998:roman">I</a>
 						</li>
 						<li>
-							<a href="text/chapter-10.xhtml#chapter-10-2">2</a>
+							<a href="text/chapter-10.xhtml#chapter-10-2" epub:type="z3998:roman">II</a>
 						</li>
 						<li>
-							<a href="text/chapter-10.xhtml#chapter-10-3">3</a>
+							<a href="text/chapter-10.xhtml#chapter-10-3" epub:type="z3998:roman">III</a>
 						</li>
 						<li>
-							<a href="text/chapter-10.xhtml#chapter-10-4">4</a>
+							<a href="text/chapter-10.xhtml#chapter-10-4" epub:type="z3998:roman">IV</a>
 						</li>
 						<li>
-							<a href="text/chapter-10.xhtml#chapter-10-5">5</a>
+							<a href="text/chapter-10.xhtml#chapter-10-5" epub:type="z3998:roman">V</a>
 						</li>
 						<li>
-							<a href="text/chapter-10.xhtml#chapter-10-6">6</a>
+							<a href="text/chapter-10.xhtml#chapter-10-6" epub:type="z3998:roman">VI</a>
 						</li>
 					</ol>
 				</li>
@@ -160,22 +160,22 @@
 					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Almost Entirely About Flowerpots</a>
 					<ol>
 						<li>
-							<a href="text/chapter-11.xhtml#chapter-11-1">1</a>
+							<a href="text/chapter-11.xhtml#chapter-11-1" epub:type="z3998:roman">I</a>
 						</li>
 						<li>
-							<a href="text/chapter-11.xhtml#chapter-11-2">2</a>
+							<a href="text/chapter-11.xhtml#chapter-11-2" epub:type="z3998:roman">II</a>
 						</li>
 						<li>
-							<a href="text/chapter-11.xhtml#chapter-11-3">3</a>
+							<a href="text/chapter-11.xhtml#chapter-11-3" epub:type="z3998:roman">III</a>
 						</li>
 						<li>
-							<a href="text/chapter-11.xhtml#chapter-11-4">4</a>
+							<a href="text/chapter-11.xhtml#chapter-11-4" epub:type="z3998:roman">IV</a>
 						</li>
 						<li>
-							<a href="text/chapter-11.xhtml#chapter-11-5">5</a>
+							<a href="text/chapter-11.xhtml#chapter-11-5" epub:type="z3998:roman">V</a>
 						</li>
 						<li>
-							<a href="text/chapter-11.xhtml#chapter-11-6">6</a>
+							<a href="text/chapter-11.xhtml#chapter-11-6" epub:type="z3998:roman">VI</a>
 						</li>
 					</ol>
 				</li>
@@ -186,19 +186,19 @@
 					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: Psmith Receives Guests</a>
 					<ol>
 						<li>
-							<a href="text/chapter-13.xhtml#chapter-13-1">1</a>
+							<a href="text/chapter-13.xhtml#chapter-13-1" epub:type="z3998:roman">I</a>
 						</li>
 						<li>
-							<a href="text/chapter-13.xhtml#chapter-13-2">2</a>
+							<a href="text/chapter-13.xhtml#chapter-13-2" epub:type="z3998:roman">II</a>
 						</li>
 						<li>
-							<a href="text/chapter-13.xhtml#chapter-13-3">3</a>
+							<a href="text/chapter-13.xhtml#chapter-13-3" epub:type="z3998:roman">III</a>
 						</li>
 						<li>
-							<a href="text/chapter-13.xhtml#chapter-13-4">4</a>
+							<a href="text/chapter-13.xhtml#chapter-13-4" epub:type="z3998:roman">IV</a>
 						</li>
 						<li>
-							<a href="text/chapter-13.xhtml#chapter-13-5">5</a>
+							<a href="text/chapter-13.xhtml#chapter-13-5" epub:type="z3998:roman">V</a>
 						</li>
 					</ol>
 				</li>
