--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -11,7 +11,7 @@
 				<h2 epub:type="title">Colophon</h2>
 				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo"/>
 			</header>
-			<p><i epub:type="se:name.publication.book">Leave it to Psmith</i><br/>
+			<p><i epub:type="se:name.publication.book">Leave It to Psmith</i><br/>
 			was published in 1923 by<br/>
 			<a href="https://en.wikipedia.org/wiki/P._G._Wodehouse"><abbr class="name">P. G.</abbr> Wodehouse</a>.</p>
 			<p>This ebook was produced for the<br/>
