--- a/src/epub/text/titlepage.xhtml
+++ b/src/epub/text/titlepage.xhtml
@@ -8,7 +8,7 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="titlepage" epub:type="titlepage">
-			<img alt="The titlepage for the Standard Ebooks edition of Leave it to Psmith, by P.G. Wodehouse" src="../images/titlepage.svg"/>
+			<img alt="The titlepage for the Standard Ebooks edition of Leave It to Psmith, by P.G. Wodehouse" src="../images/titlepage.svg"/>
 		</section>
 	</body>
 </html>
