--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -223,7 +223,7 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">Leave it to Psmith</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">Leave It to Psmith</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
