--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -19,7 +19,7 @@
 			by<br/>
 			<a href="http://www.github.com/vrajmohan">Vraj Mohan</a>,<br/>
 			and is based on a transcription produced in 2019 by<br/>
-			<b epub:type="z3998:personal-name">Ramon Pajares Box</b>, <b epub:type="z3998:personal-name">Jim Adcock</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b epub:type="z3998:personal-name">Ramon Pajares Box</b>, <b epub:type="z3998:personal-name">Jim Adcock</b>, and <a href="https://www.pgdp.net">Distributed Proofreaders</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/60067">Project Gutenberg</a><br/>
 			and on digital scans from the<br/>
